@@ -52,8 +52,8 @@
     </organization>
 
     <properties>
-        <java.version>17</java.version>
-        <maven.compiler.release>17</maven.compiler.release>
+        <java.version>19</java.version>
+        <maven.compiler.release>19</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
@@ -81,10 +81,7 @@
         <fluffyj.version>1.10.0</fluffyj.version>
         <fluffyj.tests.version>1.5.0</fluffyj.tests.version>
         <custom.jvm.options>
-            --enable-native-access=ALL-UNNAMED
-            --add-modules=ALL-SYSTEM,jdk.incubator.foreign
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --enable-native-access=ALL-UNNAMED --enable-preview
         </custom.jvm.options>
     </properties>
 
@@ -331,11 +328,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <release>${java.version}</release>
                         <compilerArgs>
-                            <compilerArg>--add-modules</compilerArg>
-                            <compilerArg>jdk.incubator.foreign</compilerArg>
+                            <compilerArg>--enable-preview</compilerArg>
                         </compilerArgs>
+                        <release>${java.version}</release>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -440,8 +436,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <additionalOptions>
-                        <option>--add-modules</option>
-                        <option>jdk.incubator.foreign</option>
+                        <option>--enable-preview</option>
                     </additionalOptions>
                     <doclint>-missing</doclint>
                     <quiet>true</quiet>
